# sentinel

./: .bandit  .dockerignore  .env.example  .env.example.microservices  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_IMPROVEMENTS.md  BRANCH_COMPARISON_ANALYSIS.md  BUG_FIXES_SUMMARY.md  BUG_REPORT.md  CALCULATIONS_DB_IMPLEMENTATION.md  CALCULATIONS_DB_QUICK_REFERENCE.md  CASH_FLOWS_API_FINDINGS.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS.md  COMPILATION_AND_TEST_RESULTS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETION_SUMMARY.md  DATABASE_MIGRATION_STATUS.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  FINAL_IMPLEMENTATION_STATUS.md  FINAL_STATUS.md  GO.md  GO_FULL_PLANNING_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REVIEW.md  INSTALL.md  LED_MATRIX_ANALYSIS.md  LEGACY_FEATURE_USAGE_ANALYSIS.md  LEGACY_MIGRATION_ANALYSIS.md  MIGRATION-REPORT.md  MIGRATION_AUDIT.md  MULTI_DEVICE_ANALYSIS.md  (+39 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
TUI/: go.mod  go.sum  settings.json
app/: __init__.py  config.py  database.py  main.py
arduino-app/: README.md
bridge-go/: bridge-go.service  go.mod  go.sum  main.go
data/: stocks.json  trader.db-shm
deploy/: add-reboot-cron.sh  arduino-trader.service  cloudflared-setup.sh  led-display.service  setup.sh
display/: README.md  app.yaml
docs/: ARCHITECTURAL_ANALYSIS.md  COMPLETION_STATUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_RESTART_FIX.md  DEPRECATION.md  FINANCIAL_ADVISOR_RECOMMENDATIONS.md  FINANCIAL_ADVISOR_REVIEW.md  IMPLEMENTATION_ORDER.md  MICROSERVICE_FRAMEWORK_ALTERNATIVES.md  MIGRATION_COMPLETE.md  ML_PREDICTION.md  MODULAR_PLANNER_STATUS.md  OPTIMIZER_PLANNER_INTEGRATION.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PLANNER_ALGORITHM_IMPROVEMENTS.md  PORTFOLIO_HEALTH_DISPLAY.md  PRODUCTION_READINESS.md  PRODUCT_TYPE_DIFFERENTIATION.md  QUANTUM_IMPLEMENTATION_REVIEW.md  QUANTUM_PROBABILITY_IMPLEMENTATION.md  README.md  TAG_BASED_OPTIMIZATION.md  TLS-SETUP.md  TRADERNET_SDK_ANALYSIS.md  UPDATE_SUMMARY.md  YAHOO_FINANCE_MICROSERVICE_BRAINSTORM.md  audit_portfolio_logic_findings_2026-02-05.md  deposit_history.md  go-code-quality-improvements.md  implementation-summary-planner-ui.md  microservices-implementation-status.md  migration-discrepancy-report.md  planner-audit.md  portfolio_composition.md  refactoring_summary.md  strategy_contrarian.md  universe_management.md
frontend/: vite.config.js
microservices/: README.md
migrations/: add_averaging_down_percent.sql  add_planner_optimizer_fields.sql  migrate_planner_settings_cleanup.sql  migrate_settings_to_planner.sql
scripts/: MIGRATION_README.md  README.md  add_package_comments.sh  apply_schema_updates.sh  auto-deploy.sh  backfill_isin.py  backfill_ml_predictions.py  backfill_product_types.py  backfill_regime_states.py  backfill_scores.py  backup_databases.sh  backup_legacy_databases.sh  benchmark_api.sh  build.sh  check_cash_flows_detailed.py  clear_ml_data.py  compile_and_upload_sketch.sh  config.sh  delete_individual_targets.py  deploy-full.sh  deploy-led-app.sh  deploy-local.sh  deploy.sh  deploy_to_device.sh  explore_tradernet_api.py  fix_deployment_ownership.sh  fix_security_countries.py  fix_stock_countries.py  generate_ml_training_data.py  health_check.sh  i2c_led_client.py  import_freedom24.py  led_display_native.py  logs.sh  migrate_038_json_storage.sh  migrate_db_structure.py  migrate_history_files.py  migrate_to_monthly.py  migrate_v2.py  migrate_v3.py  (+25 more)
sentinel/: __init__.py  aggregates.py  analyzer.py  app.py  backtester.py  broker.py  cache.py  cool-retro-term.json  correlation_cleaner.py  currency.py  currency_exchange.py  database.py  entropy_optimizer.py  freedom24_web.py  markets.py  ml_ensemble.py  ml_features.py  ml_monitor.py  ml_predictor.py  ml_regime.py  ml_retrainer.py  ml_trainer.py  planner.py  portfolio.py  portfolio_composition.py  portfolio_optimizer.py  price_validator.py  regime_detector.py  regime_hmm.py  regime_quote.py  security.py  (+5 more)
sentinel-tui/: pyproject.toml
sentinel-tui-go/: go.mod  go.sum  main.go
sentinel-tui/sentinel_tui/: __main__.py  app.py  config.py
sentinel-tui/sentinel_tui/api/: client.py
(+2891 files in other folders)
