[project]
name = "sentinel"
version = "1.0.0"
description = "Long-term portfolio management system"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "tradernet-sdk>=2.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "PyWavelets>=1.7.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "hmmlearn>=0.3.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "ta>=0.11.0",
    "boto3>=1.26.0",
    "APScheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]
exclude = ["web*", "data*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "S", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
# Downgrade annotation-dependent rules to warning until project adds type annotations
reportOptionalMemberAccess = "warning"
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
reportOperatorIssue = "warning"
reportAssignmentType = "warning"
reportReturnType = "warning"
reportOptionalSubscript = "warning"
reportMissingImports = "warning"
