[project]
name = "sentinel-tui"
version = "0.1.0"
description = "Terminal UI for Sentinel portfolio manager"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
sentinel-tui = "sentinel_tui.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sentinel_tui*"]
